- Added some more details on installing the kernel (Hope this will work)

--- a/linux/dell-xps-17-9700-on-ubuntu.adoc
+++ b/linux/dell-xps-17-9700-on-ubuntu.adoc
@@ -85,6 +85,8 @@ This will take a while now ...
 
     sudo dpkg -i linux-headers-5.11.0-16_5.11.0-16.17+audio_all.deb linux-headers-5.11.0-16-generic_5.11.0-16.17+audio_amd64.deb linux-image-unsigned-5.11.0-16-generic_5.11.0-16.17+audio_amd64.deb linux-modules-5.11.0-16-generic_5.11.0-16.17+audio_amd64.deb linux-modules-extra-5.11.0-16-generic_5.11.0-16.17+audio_amd64.deb linux-buildinfo-5.11.0-16-generic_5.11.0-16.17+audio_amd64.deb
 
+NOTE: After I executed this ... I got serious problems :-(
+
 TODO: Continue here ...
 
 #### Bluetooth Problems
