--- a/plc4x/free-trial-expired.adoc
+++ b/plc4x/free-trial-expired.adoc
@@ -8,7 +8,7 @@ Working on Apache PLC4X is a huge amount of work and expensive as it requires pu
 
 ## Long version
 
-I started working on what was to become Apache PLC4X about 10 years ago (way before Industry 4.0 was a thing), but I gave up on it temporarily after some time when I decided to go for a full employment position and effectively started again working on it full-time 5 years ago. At that time, I was seeing the need and opportunity for IT solutions in the automation industry. I was seeing opportunity for focusing on making production more efficient, wasting less resources and even making products live longer.
+I started working on what was to become Apache PLC4X about 10 years ago (way before Industry 4.0 was a thing), but I gave up on it temporarily after some time when I decided to go for a full employment position and effectively started again working on it full-time 5 years ago. At that time, I was seeing the need and opportunity for IT solutions in the automation industry. I was seeing a big opportunity for focusing on making production more efficient, wasting less resources and even making products live longer.
 
 Unfortunately, I was only seeing super expensive solutions provided by the major automation vendors. The price tags of all of these were sort of around 10k€ per user per year. I knew smaller companies wouldn't be able to participate in the quest for digitizing their production as the license costs would be simply eating up what the improvements could possibly bring them.
 
@@ -16,39 +16,39 @@ However, I knew open source had all the tools needed for digitizing automation p
 
 Luckily my former employer: codecentric believed in my vision of enabling companies to digitize their processes using open source, and I was allowed to work fulltime on Apache PLC4X for 3,5 years. It was the general idea to earn money with training and consulting in this area. Unfortunately, we couldn't have imagined how hard it is to grab hold in the automation industry. Even if every POC we did was a huge success. Here I'm not talking about achieving the goal, it was more exceeding the customer's expectations by lightyears: Like being able to save 180.000.000 € in license costs or being 1200 times more performant than the established solution. Providing 100% secure unlimited real-time data for machine learning where the fastest industrial solution cost 100k€ and more in license costs and allowed only 10k data-points with a latency of a few minutes.
 
-I took every opportunity to talk at conferences, publish articles in magazines or write blog posts. I think in the pre-pandemic times I resulted at an average of 26 talks per year at different international conferences and meetups. During pandemic times, the talks were less frequent, but I took every chance at talking at meetups I wouldn't have been able to talk at if it was a presence meetup. IT folks were definitely picking up on the stuff I was talking about.
+I took every opportunity to talk at conferences, publish articles in magazines or write blog posts. I think in the pre-pandemic times I resulted at an average of 26 talks per year at different international conferences and meetups. During pandemic times, the talks were less frequent, but I took every chance at talking at meetups I wouldn't have been able to talk at, if it was a presence meetup. IT folks were definitely picking up on the stuff I was talking about.
 
-We still failed miserably: On the one side there's no point in convincing the IT folks that what you've got to offer is awesome, if the OT folks don't know about it. And everything in the OT world is pay-to-play. You'll never get an article posted in an OT magazine, if you don't pay for it. The only articles on open-source I found there rather made me cry than jump of joy. There companies like Siemens even tried appearing as an open-source company by describing how they allow running their proprietary MindSphere on OpenStack. In the OT world there are no conferences, like in the IT world, because everything is about industrial fairs with extremely expensive booths. The budgets the big players are unbelievable. I'll never forget the SPS in Nürnberg where Siemens had an entire floor on the Fair for their MindSphere which probably was one third of the entire Siemens fair presence. I tried getting information but couldn't get any. In the end the only thing everyone remembered was the huge amount of generally good-looking female mess-hostesses with short skirts and (now comes what everyone remembered) blinking shoes. To cut it short: As an open-source project you have no chance to be noticed at all.
+We still failed miserably: On the one side there's no point in convincing the IT folks that what you've got to offer is awesome, if the OT folks don't know about it. And everything in the OT world is pay-to-play. You'll never get an article posted in an OT magazine, if you don't pay for it. The only articles on open-source I found there rather made me cry than jump of joy. There companies like Siemens even tried appearing as an open-source company by describing how they allow running their proprietary MindSphere on OpenStack. In the OT world there are no conferences, like in the IT world, because everything is about industrial fairs with extremely expensive booths. The budgets the big players have at their disposal are simply unbelievable. I'll never forget the SPS in Nürnberg in 2018, where Siemens had an entire floor on the Fair for their MindSphere product, which probably was one third of the entire Siemens fair presence space. I tried getting information but couldn't get any. In the end the only thing everyone remembered when I talked to them about it, was the huge amount of female mess-hostesses with short skirts and (now comes the part everyone remembered) blinking shoes. To cut it short: As an open-source project you have no chance to be noticed at all.
 
-We also failed at getting customers to go beyond our incredibly successful POCs, because then the shopping departments needed to be involved, and they were worried about losing their status with their favorite vendors (and probably the cool incentives that came along with that status), we failed at head of departments as they were fearing to lose budget if free solutions worked. If you get the same job done for 50k€ with open-source that you usually paid 500k€ for, if you switch to open-source, you get less budget to manage next year. Nobody's expecting you to do that and “You don't get fired for hiring {name of some major automation vendor here}”.
+We also failed at getting customers to go beyond our incredibly successful POCs. We were told off the record, because then the shopping departments needed to be involved, and they were worried about losing their status with their favorite vendors (and probably the cool incentives that came along with that status), sometimes even the automation vendors held a significant amount of shares and simply blocked our attempts, we failed at head of departments, as they were fearing to lose budget if free solutions worked. If you get the same job done for 50k€ with open-source that you usually paid 500k€ for, if you switch to open-source, you get 450k€ less budget to manage next year, and it seems every manager in OT defines Success based on the size of the budget he gets to manage. When nobody's expecting you to do that and “You don't get fired for hiring {name of some major automation vendor here}”, why change things?
 
 Unfortunately, due to the NDA's we had to sign everywhere, we couldn't even openly talk about our successes. Everything in the automation industry is considered top-secret, even telling the world that you're using a given solution seems to be impossible.
 
-We got loads of emails in the form of: “So we're using your super cool PLC4X in one of our countries biggest {steel melting plants}/{aerospace companies}/{car manufacturers}/{pharmazeutical companies}/... and have this problem … “ sent from email addresses like: john.doe@googlemail.com. They all wanted help. Help for free and didn't even have the decency of mentioning what company they were working for. And I was so stupid to give them exactly what they needed.
+Most requests for help emails on our mailing-list were like: “So we're using your super cool PLC4X in one of our countries biggest {steel melting plants}/{aerospace companies}/{car manufacturers}/{pharmazeutical companies}/... and have this problem … “ sent from email addresses like: john.doe@googlemail.com. They all wanted help. Help for free and didn't even have the decency of mentioning what company they were working for. And I was so stupid to give them exactly what they needed.
 
-So, in 2020 (I know … this was a pretty “sub-optimal” year all together) I had to decide. I was going to have to give up on PLC4X or give up my Job at codecentric. So, I gave up the job and was planning on living from consulting gigs for industrial open source, which I still strongly believed in and didn't look that bad in the second half of 2020. Luckily, I was able to get financing from NLNet to continue working on PLC4C for another half a year.
+So, in 2020 (I know … this was a pretty “sub-optimal” year all together) I had to decide. I was going to have to give up on PLC4X or give up my Job at codecentric. So, I gave up the job and was planning on living from consulting gigs for industrial open source, which I still strongly believed in, and didn't look that bad in the second half of 2020. Luckily, I was able to get financing from NLNet to continue working on PLC4C for another half a year.
 
-Unfortunately, Covid didn't go away and after a few months of positive numbers the next wave hit and all the companies that were starting to open their purses, instantly closed them again.
+Unfortunately, Covid didn't go away and after a few months of positive numbers the next wave hit the world and all the companies that were starting to open their purses, instantly closed them again.
 
-Luckily for the both of us, at that time Shaun from Mapped approached me as he was looking for someone able to help talk to building automation systems. I was happy to join, however I insisted on being able to continue running my business as a side-thing (as long as it has no impact on my work for Mapped) as I knew: If there's no place a company could get commercial consulting, I could probably just bury the project.
+Luckily for the both of us, at that time Shaun from Mapped approached me as he was looking for folks able to help communicate with building automation systems. I was happy to join, however I insisted on being able to continue running my business as a side-thing (as long as it has no impact on my work for Mapped). I knew: If there's no place a company could get commercial consulting, I could probably just bury the project.
 
-So since then, I have been working hard on the parts of PLC4X which we needed for our work at Mapped. These were mainly porting PLC4X to Go and working on drivers and auto-discovery used in building automation systems, but not on anything considered community-work on the project. At Apache, we know community is the hardest but also the most important part. So, after working times, on weekends and even on most of my holidays, I kept on pushing the open-source project, writing reports, doing releases, mentoring people showing interest, submitting and performing talks, providing fee community support, addressing security issues, doing normal project housekeeping. In general: Keeping the lights on.
+So since then, I have been working hard on the parts of PLC4X which we needed for our work at Mapped. These were mainly porting PLC4X to Go and working on drivers and auto-discovery used in building automation systems, but not on anything considered "community-work" on the project. At Apache, we know community is the hardest but also the most important part. So, after working times, on weekends and even on most of my holidays, I kept on pushing the open-source project, writing reports, doing releases, mentoring people showing interest, submitting and performing talks, providing fee community support, addressing security issues, doing normal project housekeeping. In general: Keeping the lights on.
 
 The problem now is: In Germany a company needs to be profitable. If you run your business at a deficit for too long, you get your business closed, and you even must pay back a lot of taxes.
 
-As I have been focusing on PLC4X without getting many paid gigs, but I still needed to pay a lot of money for purchasing hard and software, I have been running my business at a deficit for way too long. I managed to convince them to give me a bit more time to become profitable (after all that's my goal).
+As I have been focusing on PLC4X without getting many paid gigs, but I still needed to pay a lot of money for purchasing hard and software. Therefore, I have been running my business at a deficit for way too long. I managed to convince the tax officials to give me a bit more time to become profitable (after all that's my goal).
 
-I think this year I managed to do so thanks to the Spanish company Zylk and their paid gig for implementing a Profinet driver while keeping invests at an absolute minimum.
+I think this year I managed to do so, thanks to the Spanish company Zylk and their paid gig for implementing a Profinet driver while keeping invests at an absolute minimum at the same time.
 
 Every year for the past years has ended the same way: In December many companies approach me, asking for offers for paid gigs which should start asap. Then I get excuses for why this decision will have to be postponed to January next year. Then I never hear from them again. In this respect this year is not any different.
 
-However, this year one thing is different: I'm sick of fighting. I'm sick of investing my precious free time for others and not really getting anything back. I'm sick of how everything in the OT is pay-to-play and especially how everything in the OT clearly communicating on a post-fact way. While in the past it was considered good to back your claims by facts, now it's just about spreading fake-news and the one being loudest, is going to be the winner. Here everything there seems to be about marketing and no longer about engineering.
+However, this year one thing is different: I'm sick of fighting. I'm sick of investing my precious free time for others and not really getting anything back. I'm sick of how everything in the OT is pay-to-play and especially how everything in the OT clearly communicating on a post-fact way. While in the past it was considered good to back your claims by facts, now it's just about spreading fake-news and the one being loudest, are going to be the winners. I'm not willing to play that game.
 
 So I will probably shut my business down myself in April 2022 (which is 3 months before I would have been running that business without interruption for 25 years).
 
-As a last attempt to keep the lights on, I am switching the mode I am providing support for PLC4X: I am no longer implementing features users might need, I am no longer instantly fixing bugs for free on the weekend. I will continue help others fix and build stuff themselves and if I personally need something or want to try something out, I'll continue doing this. However, I will no longer port PLC4X to new languages, port drivers to new languages, implement new drivers or integration modules for free.
+As a last attempt to keep the lights on, I am switching the mode I am providing support for PLC4X: I am no longer implementing features users might need, I am no longer instantly fixing bugs for free on the weekend. I will continue help others fix and build stuff themselves and if I personally need something or want to try something out, I'll continue doing this. However, I will no longer port PLC4X to new languages, port drivers to new languages, implement new drivers or integration modules and most definitely not help companies with consulting, training and support for free.
 
-I have setup a new section on my website, in which I list various things that have been asked for a lot in the past. Each initiative has a price-tag. Companies liking to see one of these initiatives become a reality are free to back the campaigns in a crowdfunding-like fashion. As soon as the funding goal is reached, I will start working on it.
+For support I always provided commercial support and will continue to do so. Same with consulting and training. But beyond that, I have setup a new section on my website, in which I list various things that have been asked for a lot in the past. Each initiative has a price-tag. Companies liking to see one of these initiatives become a reality are free to back the campaigns in a crowdfunding-like fashion. As soon as the funding goal is reached, I will start working on it.
 
 If the industry doesn't support the people behind open source, I at least will from now on stop blindly supporting them for free.
 
