--- a/plc4x/free-trial-expired.adoc
+++ b/plc4x/free-trial-expired.adoc
@@ -8,11 +8,13 @@ Working on Apache PLC4X is a huge amount of work and expensive as it requires pu
 
 ## Long version
 
-I started working on what was to become Apache PLC4X about 10 years ago (way before Industry 4.0 was a thing), but I gave up on it temporarily after some time when I decided to go for a full employment position and effectively started again working on it full-time 5 years ago. At that time, I was seeing the need and opportunity for IT solutions in the automation industry. I was seeing a big opportunity for focusing on making production more efficient, wasting less resources and even making products live longer.
+I started working on what was to become Apache PLC4X about 10 years ago (way before Industry 4.0 was a thing), but I gave up on it temporarily after some time when I decided to go for a full employment position. At that time I wanted to provide Software for the automation industry, but at that time my plans were aimed at implementing my own proprietary software, which only I could use to building software. However, I noticed quickly that this is a huge undertaking - nothing a single person could possibly implement all on his own.
 
-Unfortunately, I was only seeing super expensive solutions provided by the major automation vendors. The price tags of all of these were sort of around 10k€ per user per year. I knew smaller companies wouldn't be able to participate in the quest for digitizing their production as the license costs would be simply eating up what the improvements could possibly bring them.
+About 5 years later all of this "Industry 4.0" was popping up everywhere. I was seeing a big opportunity for focusing on making production more efficient, wasting less resources and even making products live longer.
 
-However, I knew open source had all the tools needed for digitizing automation processes, if there only was a way to access the data on the production machinery. Industrial automation was and still is using a huge number of specialized protocols for which there were only some badly licensed (from a business perspective) open-source libraries or commercial libraries with average price-tags of 4k€ per node running a driver.
+Unfortunately, I was only seeing super expensive solutions provided by the major automation vendors. The price tags of all of these were usually somewhere around 10k€ per user per year. I knew smaller companies wouldn't be able to participate in the quest for digitizing their production as the license costs for these products would simply be eating up what the improvements could possibly bring them.
+
+However, I knew open source had all the tools needed for digitizing automation processes, if there only was a way to access the data on the production machinery. Industrial automation was and still is using a huge number of specialized protocols for which there were only some badly licensed (from a business perspective) open-source libraries or commercial libraries with average price-tags of 4k€ per node running a driver. This was when I remembered what I had been working on 5 years before. However, this time I didn't want to do it all on my own, I wanted to do it the open-source way.
 
 Luckily my former employer: codecentric believed in my vision of enabling companies to digitize their processes using open source, and I was allowed to work fulltime on Apache PLC4X for 3,5 years. It was the general idea to earn money with training and consulting in this area. Unfortunately, we couldn't have imagined how hard it is to grab hold in the automation industry. Even if every POC we did was a huge success. Here I'm not talking about achieving the goal, it was more exceeding the customer's expectations by lightyears: Like being able to save 180.000.000 € in license costs or being 1200 times more performant than the established solution. Providing 100% secure unlimited real-time data for machine learning where the fastest industrial solution cost 100k€ and more in license costs and allowed only 10k data-points with a latency of a few minutes.
 
