--- a/plc4x/free-trial-expired.adoc
+++ b/plc4x/free-trial-expired.adoc
@@ -8,7 +8,7 @@ Working on Apache PLC4X is a huge amount of work and expensive as it requires pu
 
 ## Long version
 
-I started working on what was to become Apache PLC4X about 10 years ago (way before Industry 4.0 was a thing), but I gave up on it temporarily after some time when I decided to go for a full employment position. At that time I wanted to provide Software for the automation industry, but at that time my plans were aimed at implementing my own proprietary software, which only I could use to building software. However, I noticed quickly that this is a huge undertaking - nothing a single person could possibly implement all on his own.
+I started working on what was to become Apache PLC4X about 10 years ago (way before Industry 4.0 was a thing), but I gave up on it temporarily after a few months. At that time I wanted to provide Software for the automation industry, but at that time my plans were aimed at implementing my own proprietary software, which only I could use to building software. However, I noticed quickly that this is a huge undertaking - nothing a single person could possibly implement all on his own. I finally decided to take a full employment position.
 
 About 5 years later all of this "Industry 4.0" was popping up everywhere. I was seeing a big opportunity for focusing on making production more efficient, wasting less resources and even making products live longer.
 
