--- a/plc4x/free-trial-expired.adoc
+++ b/plc4x/free-trial-expired.adoc
@@ -14,7 +14,9 @@ About 5 years later all of this "Industry 4.0" was popping up everywhere. I was 
 
 Unfortunately, I was only seeing super expensive solutions provided by the major automation vendors. The price tags of all of these were usually somewhere around 10k€ per user per year. I knew smaller companies wouldn't be able to participate in the quest for digitizing their production as the license costs for these products would simply be eating up what the improvements could possibly bring them.
 
-However, I knew open source had all the tools needed for digitizing automation processes, if there only was a way to access the data on the production machinery. Industrial automation was and still is using a huge number of specialized protocols for which there were only some badly licensed (from a business perspective) open-source libraries or commercial libraries with average price-tags of 4k€ per node running a driver. This was when I remembered what I had been working on 5 years before. However, this time I didn't want to do it all on my own, I wanted to do it the open-source way.
+However, I knew open source had all the tools needed for digitizing automation processes. I could even see how the "new" products the big automation vendors were pushing to the market were all based on stuff I personally already considered legacy. Open-source with its new ideas and ways of doing things, it's speed of evolution were just light-years ahead of the automation industry. Let's face it: The automation industry is great at automating stuff and building hardware, but IT is jut not their domain of expertise and never has been. Now all of a sudden, they want to tell the world how IT is done right? LOL!
+
+If there only was a way to access the data on the production machinery! Industrial automation was and still is using a huge number of specialized protocols for which there were only some badly licensed (from a business perspective) open-source libraries or commercial libraries with average price-tags of 4k€ per node running a driver. This was when I remembered what I had been working on 5 years before. However, this time I didn't want to do it all on my own, I wanted to do it the open-source way.
 
 Luckily my former employer: codecentric believed in my vision of enabling companies to digitize their processes using open source, and I was allowed to work fulltime on Apache PLC4X for 3,5 years. It was the general idea to earn money with training and consulting in this area. Unfortunately, we couldn't have imagined how hard it is to grab hold in the automation industry. Even if every POC we did was a huge success. Here I'm not talking about achieving the goal, it was more exceeding the customer's expectations by lightyears: Like being able to save 180.000.000 € in license costs or being 1200 times more performant than the established solution. Providing 100% secure unlimited real-time data for machine learning where the fastest industrial solution cost 100k€ and more in license costs and allowed only 10k data-points with a latency of a few minutes.
 
