--- a/plc4x/free-trial-expired.adoc
+++ b/plc4x/free-trial-expired.adoc
@@ -18,9 +18,9 @@ However, I knew open source had all the tools needed for digitizing automation p
 
 If there only was a way to access the data on the production machinery! Industrial automation was and still is using a huge number of specialized protocols for which there were only some badly licensed (from a business perspective) open-source libraries or commercial libraries with average price-tags of 4k€ per node running a driver. This was when I remembered what I had been working on 5 years before. However, this time I didn't want to do it all on my own, I wanted to do it the open-source way.
 
-Luckily my former employer: codecentric believed in my vision of enabling companies to digitize their processes using open source, and I was allowed to work fulltime on Apache PLC4X for 3,5 years. It was the general idea to earn money with training and consulting in this area. Unfortunately, we couldn't have imagined how hard it is to grab hold in the automation industry. Even if every POC we did was a huge success. Here I'm not talking about achieving the goal, it was more exceeding the customer's expectations by lightyears: Like being able to save 180.000.000 € in license costs or being 1200 times more performant than the established solution. Providing 100% secure unlimited real-time data for machine learning where the fastest industrial solution cost 100k€ and more in license costs and allowed only 10k data-points with a latency of a few minutes.
+Luckily my former employer: codecentric believed in my vision of enabling companies to digitize their processes using open source, and I was allowed to work fulltime on Apache PLC4X for about one year and when the codecentric HQ was planning on pulling the plug my colleagues at the Frankfurt office kept on backing me for 2,5 more years. It was the general idea to earn money with training and consulting in this area, brining in the expertise of the company on the sector of open-source. Unfortunately, we couldn't have imagined how hard it is to grab hold in the automation industry market. Every POC we did was a huge success. Here I'm not talking about achieving the goal, it was more: exceeding the customer's expectations by light-years: Like being able to save 180.000.000 € in license costs or being 1200 times more performant than the established solution. Providing 100% secure unlimited real-time data for machine learning where the fastest industrial solution cost 100k€ and more in license costs and allowed only 10k data-points with a latency of a few minutes.
 
-I took every opportunity to talk at conferences, publish articles in magazines or write blog posts. I think in the pre-pandemic times I resulted at an average of 26 talks per year at different international conferences and meetups. During pandemic times, the talks were less frequent, but I took every chance at talking at meetups I wouldn't have been able to talk at, if it was a presence meetup. IT folks were definitely picking up on the stuff I was talking about.
+I took every opportunity to talk at conferences, publish articles in magazines or write blog posts. I think in the pre-pandemic times I had an average of 26 talks per year at different national and international conferences and meetups. During pandemic times, the talks were less frequent, but I took every chance at talking at meetups I wouldn't have been able to talk at, if it was a presence meetup. IT folks were definitely picking up on the stuff I was talking about.
 
 We still failed miserably: On the one side there's no point in convincing the IT folks that what you've got to offer is awesome, if the OT folks don't know about it. And everything in the OT world is pay-to-play. You'll never get an article posted in an OT magazine, if you don't pay for it. The only articles on open-source I found there rather made me cry than jump of joy. There companies like Siemens even tried appearing as an open-source company by describing how they allow running their proprietary MindSphere on OpenStack. In the OT world there are no conferences, like in the IT world, because everything is about industrial fairs with extremely expensive booths. The budgets the big players have at their disposal are simply unbelievable. I'll never forget the SPS in Nürnberg in 2018, where Siemens had an entire floor on the Fair for their MindSphere product, which probably was one third of the entire Siemens fair presence space. I tried getting information but couldn't get any. In the end the only thing everyone remembered when I talked to them about it, was the huge amount of female mess-hostesses with short skirts and (now comes the part everyone remembered) blinking shoes. To cut it short: As an open-source project you have no chance to be noticed at all.
 
